# salesforce-object-flow

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/applications/: es.hawara.SalesforceObjectFlow.desktop
po/: POTFILES.in  es.po
salesforce_object_flow/: __init__.py  __main__.py  i18n.py  i18n_errors.py  main.py  style.css  window.py
salesforce_object_flow/core/: __init__.py  cache.py  composite.py  config.py  credentials.py  formats.py  logging_setup.py  placeholders.py  serial.py  state.py
salesforce_object_flow/pages/: __init__.py  composite.py  connections.py  formats.py  groups.py  objects.py  serial.py  welcome.py
salesforce_object_flow/services/: __init__.py  api.py  composite.py  connections.py  errors.py  formats.py  loopback.py  oauth.py  serial.py  sobjects.py
salesforce_object_flow/ui/: __init__.py  dialog.py  helpers.py  layout.py  timer.py
scripts/: i18n.py
tests/: conftest.py  test_cache.py  test_composite_core.py  test_composite_executor.py  test_composite_renderer.py  test_composite_store.py  test_composite_validator.py  test_config.py  test_config_orgs.py  test_connections_orchestrator.py  test_formats_core.py  test_formats_store.py  test_formats_validator.py  test_i18n.py  test_loopback.py  test_oauth.py  test_serial_core.py  test_serial_executor.py  test_serial_renderer.py  test_serial_store.py  test_serial_validator.py  test_smoke.py  test_sobjects.py  test_state.py
